////////// CHANGE LOG ////////// -------------------------------- * Adding display-movie component * Adding edit-movie component * Adding pagination component * Adding assets

--- a/pdi-kata/src/app/app.component.html
+++ b/pdi-kata/src/app/app.component.html
@@ -1,1 +1,26 @@
-<p>Starting to Work on project</p>
+<header>
+  <p>Header en noir avec un dégradé, icone imdb, barre de recherche, deux icones avec le drapeau français et anglais en haut à droite de l'écran</p>
+  <img src="assets/icons/logo.svg" alt="IMDb">
+  <img src="assets/icons/flag_fr.svg" alt="French">
+  <img src="assets/icons/flag_usa.svg" alt="English">
+</header>
+
+<body>
+
+</body>
+
+<footer>
+  <p>Affichage des films avec un forEach sur une page avec une limitation du nombre d'éléments par page et
+    qui sont sur le modèle d'un même component</p>
+</footer>
+
+
+<p>Créer un service qui permet de gérer les recherches</p>
+<p>Créer un service qui permet de modifier le langage</p>
+
+
+<p>Une pop up d'édition qui permet de modifier les éléments d'un film</p>
+
+<p>Une version mobile réduite sur le même principe que la page principale</p>
+<p>Le pop up mobile est sur le même principe que celui de base</p>
+<p>Afficher la page de recherche des films</p>
