--- a/pdi-kata/src/app/pagination/pagination.component.html
+++ b/pdi-kata/src/app/pagination/pagination.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <pagination-controls (pageChange)="handlePageChange($event)">
+  <!--  <pagination-controls (pageChange)="handlePageChange($event)">
 
   </pagination-controls>
   <app-pagination id="pagination" class="DoSomething"
@@ -9,5 +9,5 @@
                   [ngModel]="findCurrentPage()"
                   [maxlength]="5"
                   [boundaryLinks]="true">
-  </app-pagination>
+  </app-pagination> -->
 </div>
