--- a/pdi-kata/src/app/display-movie/display-movie.component.html
+++ b/pdi-kata/src/app/display-movie/display-movie.component.html
@@ -1,26 +1,23 @@
-<div class="container">
-  <div class="title_container">
-    <div class="title">Movie Title</div>
-    <div class="original-title">Original title Movie title</div>
-  </div>
-
-  <div class="movie-update">
-    <input type="button" src="assets/icons/icon_pencil.svg" alt="update" (click)="$event">
-  </div>
-
-  <div class="details-container">
-    <div class="movie-details">ID</div>
-    <div class="movie-details">Minutes</div>
-    <div class="movie-details">Start year</div>
-    <div class="movie-details">End year</div>
-    <div class="movie-details">is adult</div>
-    <div class="movie-details">Genres</div>
+<div *ngFor ="let movie of findMoviesData()">
+  <div class="display_movie_container">
+    <div class="movie_first_grid">
+      <div class="movie_first_block">
+        <div class="titles">
+          <div class="primary_title">{{movie.primaryTitle}}<br><span class="original_title">{{movie.originalTitle}}</span></div>
+          <div><input type="image" src="assets/icons/icon_pencil.svg" (click)="openDialog()"></div>
+        </div>
+        <div class="movie_information">
+          <div class="detail_title"> id <br><span class="details">{{movie.id}}</span></div>
+          <div class="detail_title"> Minutes <br><span class="details">{{movie.length}}</span></div>
+          <div class="detail_title"> Start year <br><span class="details">{{movie.startYear}}</span></div>
+          <div class="detail_title"> End year <br><span class="details">{{movie.endYear}}</span></div>
+          <div class="detail_title"> is adult <br><span class="details">{{movie.isAdult}}</span></div>
+          <div class="detail_title"> Genres <br><span class="details">{{movie.genres}}</span></div>
+        </div>
+      </div>
+      <div class="poster">
+        <img src="assets/icons/icon_poster.svg">
+      </div>
+    </div>
   </div>
 </div>
-
-<p>C'est une affiche d'un film</p>
-<p>Titre du film</p>
-<p>Son titre original</p>
-<p>tableau avec ID Minutes début année, Fin année, isadult</p>
-<p>Genres</p>
-<p>Comedy,Music</p>
