--- a/pdi-kata/src/app/edit-movie/edit-movie.component.css
+++ b/pdi-kata/src/app/edit-movie/edit-movie.component.css
@@ -1,3 +1,9 @@
+.form_group {
+  display: grid;
+  grid-auto-rows: 50px;
+  justify-content: left;
+}
+
 h1 {
   text-align: center;
   font-weight: bold;
